# customer-feedback-tracker-mvp

./: README.md  docker-compose.yml
backend/: .dockerignore  pyproject.toml
backend/app/: main.py  models.py  store.py
backend/app/routers/: feedback.py
frontend/: .dockerignore  Dockerfile  index.html  package.json  railway.toml  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: FeedbackFilters.tsx  FeedbackForm.tsx  FeedbackList.tsx  Layout.tsx
frontend/src/pages/: DashboardPage.tsx  FeedbackPage.tsx
